# lambda_interpreter

./: README.md  main.py  pyproject.toml
examples/: church_sum.txt  identity.txt
src/lambda_calc/: evaluator.py  models.py  parser.py
